--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	
+
+	<p>Hello <span class="black_letter">C</span>SS</p>
+
+	<div class="red_block big_height"></div>
+
+	<div></div>
+
+	<div id="super_block" class="red_block"></div>
+
+	<div></div>
+
+	<div class="red_block"></div>
+
 </body>
 </html>
